--- a/style.css
+++ b/style.css
@@ -286,6 +286,15 @@ strong {
 }
 
 @media (max-width: 768px) {
+  body {
+  background-color: #881313; /* vermelho vivo */
+  color: #ffffff; /* texto branco */
+  font-family: 'Segoe UI', 'Roboto', sans-serif;
+  margin: 0;
+  padding: 2rem;
+  background-image: radial-gradient(circle, rgba(0, 0, 0, 0.205) 0.75rem, transparent 1px);
+  background-size: 2.25rem 2.25rem;
+}
   h1 {
     font-size: 3.5rem;
     margin-top: 8rem;
