--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body {
   background-image: radial-gradient(circle, rgba(0, 0, 0, 0.205) 0.5rem, transparent 1px);
   background-size: 1.5rem 1.5rem;
 }
+html {
+  scroll-behavior: smooth;
+}
+
+#sobre, #projetos, #contato {
+  scroll-margin-top: 140px;
+}
 
 h1 {
   font-family: 'Bebas Neue', sans-serif;
