--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 #sobre, #projetos, #contato {
-  scroll-margin-top: 140px;
+  scroll-margin-top: 5rem;
 }
 
 h1 {
@@ -241,6 +241,15 @@ strong {
 }
 
 @media (max-width:1000px) {
+  body {
+    background-color: #881313; /* vermelho vivo */
+    color: #ffffff; /* texto branco */
+    font-family: 'Segoe UI', 'Roboto', sans-serif;
+    margin: 0;
+    padding: 2rem;
+    background-image: radial-gradient(circle, rgba(0, 0, 0, 0.205) 0.75rem, transparent 1px);
+    background-size: 2.25rem 2.25rem;
+  }
   .container{
     margin: 10rem 0 2rem;
     
@@ -293,15 +302,6 @@ strong {
 }
 
 @media (max-width: 768px) {
-  body {
-  background-color: #881313; /* vermelho vivo */
-  color: #ffffff; /* texto branco */
-  font-family: 'Segoe UI', 'Roboto', sans-serif;
-  margin: 0;
-  padding: 2rem;
-  background-image: radial-gradient(circle, rgba(0, 0, 0, 0.205) 0.75rem, transparent 1px);
-  background-size: 2.25rem 2.25rem;
-}
   h1 {
     font-size: 3.5rem;
     margin-top: 8rem;
