--- a/projetosStyle.css
+++ b/projetosStyle.css
@@ -31,7 +31,6 @@ h1 {
 }
 
 .projeto-card {
-
     max-width: 90%;
     position: relative;
     background-color: #000;
@@ -67,7 +66,7 @@ h1 {
 
 .projeto-card img {
   width: 100%;
-  height: 25vw;
+  height: 20vw;
   display: block;
 }
 @media (max-width:1000px){
@@ -200,8 +199,19 @@ a:hover {
       background-image: radial-gradient(circle, rgba(0, 0, 0, 0.205) 0.75rem, transparent 1px);
       background-size: 2.25rem 2.25rem;
     }
+    
+    .projeto-card{
+      margin-bottom: 7rem;
+    }
+    .projeto-card::before {
+      font-size: 4rem;
+      top: -5.6rem;
+    }
+
     h1 {
-    margin-top: 8rem;
+      font-size: 6rem;
+      margin-bottom: 6rem;
+      margin-top: 0rem;
     }
     h2 {
         font-family: 'Bebas Neue', sans-serif;
@@ -211,6 +221,10 @@ a:hover {
         text-transform: uppercase;
         letter-spacing: 1px;
     }
+  .back-button{
+    min-width: 300px;
+    min-height: 44px;
+  }
 }
 
 @media (max-width: 768px) {
